turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:10: error: not found: value x0
    allerVers(x0+x*l,y0-y*h)
              ^HouseMany:10: error: not found: value y0
    allerVers(x0+x*l,y0-y*h)
                     ^